objects/zoom_app__Zoom_Webinar_History__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zoom Webinar History</relationshipLabel>
        <relationshipName>Zoom_Webinar_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Zoom Webinar History</relationshipLabel>
        <relationshipName>Zoom_Webinar_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Webinar_Topic__c</fullName>
        <formula>zoom_app__Zoom_Webinar__r.zoom_app__Topic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar Attendee</label>
        <referenceTo>zoom_app__Zoom_Webinar_Attendee__c</referenceTo>
        <relationshipLabel>Zoom Webinar History</relationshipLabel>
        <relationshipName>Zoom_Webinar_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar_Panelist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar Panelist</label>
        <referenceTo>zoom_app__Zoom_Webinar_Panelist__c</referenceTo>
        <relationshipLabel>Zoom Webinar History</relationshipLabel>
        <relationshipName>Zoom_Webinar_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar_Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar Registrant</label>
        <referenceTo>zoom_app__Zoom_Webinar_Registrant__c</referenceTo>
        <relationshipLabel>Zoom Webinar History</relationshipLabel>
        <relationshipName>Zoom_Webinar_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar</label>
        <referenceTo>zoom_app__Zoom_Webinar__c</referenceTo>
        <relationshipLabel>Zoom Webinar History</relationshipLabel>
        <relationshipName>Zoom_Webinar_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__is_Attendeed__c</fullName>
        <formula>IF(zoom_app__Zoom_Webinar_Attendee__c  == null, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is_Attendeed</label>
        <type>Checkbox</type>
    </fields>
    <label>Zoom Webinar History</label>
    <listViews>
        <fullName>zoom_app__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Webinar-His-{0000}</displayFormat>
        <label>Zoom Webinar History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinar History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>